# zhybot

./: .gitignore  CLAUDE.md  README.md  README_zh.md  config.json  pyproject.toml
src/plugins/_aichat/: __init__.py
src/plugins/_dailythings/: __init__.py
src/plugins/aichat/: __init__.py
src/plugins/ban/: __init__.py
src/plugins/bomb/: __init__.py
src/plugins/config/: __init__.py
src/plugins/cx/: __init__.py
src/plugins/fuck_friend/: __init__.py  database.py  member_selector.py  messages.py
src/plugins/galsearch/: __init__.py  config.py  search.py
src/plugins/gen_meme/: jue.py
src/plugins/likeme/: __init__.py
src/plugins/music/: __init__.py  wyy.py
src/plugins/run/: __init__.py
src/plugins/utils/: __init__.py  selemium.py
src/plugins/welcome/: __init__.py
