[project]
name = "zhybot"
version = "0.2.0"
description = "zhybot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_alconna"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
